# fpgk8s

./: Cargo.toml
k8s-deviceplugin/: Cargo.toml  build.rs
k8s-deviceplugin/src/: lib.rs
plugin/: Cargo.toml
plugin/src/: main.rs
