[package]
name = "plugin"
version = "0.1.0"
authors = ["hasheddan <georgedanielmangum@gmail.com>"]
edition = "2021"

[dependencies]
k8s-deviceplugin = { path = "../k8s-deviceplugin" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
hyper-util = { version = "0.1" }
